# snowglobe

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/cargo-snowglobe/: Cargo.toml
crates/cargo-snowglobe/src/: fuzz.rs  main.rs  scene_binary.rs  scene_bundle.rs  target.rs
crates/snowglobe/: Cargo.toml
crates/snowglobe-macros/: Cargo.toml
crates/snowglobe-macros/src/: lib.rs
crates/snowglobe-proto/: Cargo.toml
crates/snowglobe-proto/src/: lib.rs
crates/snowglobe/examples/: openssl.rs
crates/snowglobe/examples/test-scenes/: containment.rs  determinism.rs  macro_args.rs  main.rs
crates/snowglobe/src/: alloc.rs  cli.rs  context.rs  lib.rs
crates/snowglobe/src/patch/: memory.rs  mod.rs  rng.rs  thread.rs  time.rs
crates/snowglobe/tests/: common.rs  containment.rs  determinism.rs  macro_args.rs
crates/snowglobe/tests/scenes/: Cargo.toml
crates/snowglobe/tests/scenes/src/: containment.rs  main.rs
src/: context.rs  error.rs  lib.rs  rng.rs  sim.rs  time.rs
src/patch/: mod.rs  rng.rs  thread.rs  time.rs
tests/: common.rs  containment.rs  determinism.rs
tests/scenes/: Cargo.toml
tests/scenes/src/: determinism.rs  main.rs
