[package]
name = "snowglobe"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

[dependencies]
libc = "0.2"
rand = "0.9"
turmoil = { git = "https://github.com/teskje/turmoil.git" }

[dev-dependencies]
tokio = "1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(tokio_unstable)',
    'cfg(getrandom_backend, values("linux_getrandom"))',
]
