[package]
name = "snowglobe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
argh = "0.1"
libc = "0.2"
linkme = "0.3"
rand = "0.9"
snowglobe-macros.path = "../snowglobe-macros"
snowglobe-proto.path = "../snowglobe-proto"
rlsf = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turmoil.git = "https://github.com/tokio-rs/turmoil.git"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[dev-dependencies]
openssl = { version = "0.10", features = ["vendored"] }
tokio = "1"
uuid = { version = "1", features = ["v7"] }

[lints]
workspace = true
